--- a/JosephM.Xrm.WorkflowScheduler.WebResources/JosephM.Xrm.WorkflowScheduler.WebResources.csproj
+++ b/JosephM.Xrm.WorkflowScheduler.WebResources/JosephM.Xrm.WorkflowScheduler.WebResources.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="HTML\jmcg_ws_configuration.html" />
     <Content Include="JavaScript\jmcg_ws_workflowtask.js" />
     <Content Include="JavaScript\jmcg_ws_pageutility.js" />
   </ItemGroup>
