--- a/JosephM.Xrm.WorkflowScheduler/JosephM.Xrm.WorkflowScheduler.csproj
+++ b/JosephM.Xrm.WorkflowScheduler/JosephM.Xrm.WorkflowScheduler.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,6 +11,7 @@
     <AssemblyName>JosephM.Xrm.WorkflowScheduler</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,9 +39,6 @@
   <ItemGroup>
     <Reference Include="Microsoft.Crm.Sdk.Proxy">
       <HintPath>..\Lib\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Xrm.Client">
-      <HintPath>..\Lib\Microsoft.Xrm.Client.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Xrm.Sdk">
       <HintPath>..\Lib\Microsoft.Xrm.Sdk.dll</HintPath>
@@ -119,9 +117,12 @@
     <Compile Include="Plugins\WorkflowSchedulerPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WorkflowSchedulerService.cs" />
+    <Compile Include="Workflows\StartNewMonitorInstance.cs" />
     <Compile Include="Workflows\WorkflowSchedulerWorkflowActivityInstance.cs" />
     <Compile Include="Workflows\StartNewContinuousInstance.cs" />
     <Compile Include="Workflows\WorkflowTaskExecution.cs" />
+    <Compile Include="Workflows\WorkflowScheduleMonitor.cs" />
+    <Compile Include="Workflows\WorkflowTaskMonitor.cs" />
     <Compile Include="Xrm\DeviceIdManager.cs" />
     <Compile Include="Xrm\ExceptionExtentions.cs" />
     <Compile Include="Xrm\IXrmConfiguration.cs" />
@@ -142,7 +143,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Lib\Microsoft.Crm.Sdk.Proxy.dll" />
-    <Content Include="Lib\Microsoft.Xrm.Client.dll" />
     <Content Include="Lib\Microsoft.Xrm.Sdk.dll" />
     <Content Include="Lib\Microsoft.Xrm.Sdk.Workflow.dll" />
   </ItemGroup>
