--- a/JosephM.Xrm.WorkflowScheduler.Test/JosephM.Xrm.WorkflowScheduler.Test.csproj
+++ b/JosephM.Xrm.WorkflowScheduler.Test/JosephM.Xrm.WorkflowScheduler.Test.csproj
@@ -39,6 +39,10 @@
     <Reference Include="JosephM.Core">
       <HintPath>..\JosephM.Xrm.WorkflowScheduler.EncryptXrmConfig\Lib\JosephM.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Crm.Sdk.Proxy, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\JosephM.Xrm.WorkflowScheduler\Lib\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xrm.Sdk">
       <HintPath>..\JosephM.Xrm.WorkflowScheduler\Lib\Microsoft.Xrm.Sdk.dll</HintPath>
     </Reference>
@@ -61,6 +65,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="JosephMXrmTest.cs" />
+    <Compile Include="WorkflowTaskExecutionTests.cs" />
     <Compile Include="WorkflowTaskTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestXrmConfiguration.cs" />
