--- a/JosephM.Xrm.WorkflowScheduler/JosephM.Xrm.WorkflowScheduler.csproj
+++ b/JosephM.Xrm.WorkflowScheduler/JosephM.Xrm.WorkflowScheduler.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Core\WebConfigManager.cs" />
     <Compile Include="Plugins\WorkflowSchedulerPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LocalisationService.cs" />
+    <Compile Include="Services\LocalisationSettings.cs" />
     <Compile Include="Services\WorkflowSchedulerService.cs" />
     <Compile Include="Workflows\StartNewMonitorInstance.cs" />
     <Compile Include="Workflows\WorkflowSchedulerWorkflowActivityInstance.cs" />
