Fix when wait seconds per workflow > 10 causing sandbox time limit to exceed, remove test connection app and set test script to use VSIX connection, change picklist field to display loading... prior to view names loaded

--- a/JosephM.Xrm.WorkflowScheduler/JosephM.Xrm.WorkflowScheduler.csproj
+++ b/JosephM.Xrm.WorkflowScheduler/JosephM.Xrm.WorkflowScheduler.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\JsonHelper.cs" />
     <Compile Include="OptionSets.cs" />
     <Compile Include="Plugins\WorkflowTaskPlugin.cs" />
     <Compile Include="Schema.cs" />
