Adjusted monitor for when workflow falls into a failed waiting state

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /.vs/JosephM.Xrm.WorkflowScheduler/v15/Server/sqlite3
+/.vs/JosephM.Xrm.WorkflowScheduler/v15/sqlite3
