--- a/JosephM.Xrm.WorkflowScheduler.Test/JosephM.Xrm.WorkflowScheduler.Test.csproj
+++ b/JosephM.Xrm.WorkflowScheduler.Test/JosephM.Xrm.WorkflowScheduler.Test.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="JosephMXrmTest.cs" />
     <Compile Include="WorkflowTaskExecutionTests.cs" />
+    <Compile Include="WorkflowSchedulerServiceTests.cs" />
     <Compile Include="WorkflowTaskTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XrmTest.cs" />
